chore(Button): add disabled styles and tokens

--- a/packages/ui/src/components/Button/button.css
+++ b/packages/ui/src/components/Button/button.css
@@ -81,8 +81,7 @@
 .ds-button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+  background-color: var(--color-surface-disabled);
+  color: var(--color-text-disabled);
 }
 
-.ds-button:disabled:hover {
-  background-color: inherit;
-}
